# Message-Roofline-Model

./: .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  README.md
apps/: CMakeLists.txt
apps/ishmem/: CMakeLists.txt
apps/mpi/: CMakeLists.txt  collective_mpi.cu  collective_mpi.cuh  collective_mpi_nogdr.cu  hashtable_onesideMPI.cpp  hashtable_twosideMPI_sendrecv.cpp  stencil_mpi_ddt.c  stencil_mpi_ddt_2msg.c  stencil_mpi_ddt_rma.c  stencil_mpi_ddt_rma_2msg.c
apps/nvshmem/: CMakeLists.txt  collective_nvshmem.cu  collective_nvshmem.cuh  hashtable_nvshmem.cu  jacobi.cu
apps/rccl/: CMakeLists.txt  jacobi_rccl.cpp
apps/rocshmem/: CMakeLists.txt  hashtable_rocshmem.cpp  jacobi_rocshmem.cpp  jacobi_rocshmem_opt.cpp  shmem_atomic_cas_bw.cpp  shmem_put_bw_loopallgpu.cpp  shmem_putfence_bw_loopallgpu.cpp  shmem_putfencesig_bw_loopallgpu.cpp
include/: xmr.hpp
include/commons/: cuda.hpp  hip.hpp  mpi.hpp  nvshmem.hpp  rccl.hpp  rocshmem.hpp
postp_templates/: AppScaling_BarChart.ipynb  BW_Roofline.ipynb
scripts/: build_AMD_HPC_FUND  submit_AMD_HPC_FUND  submit_AMD_HPC_FUND_jacobi
scripts/frontier/: build_FRONTIER  submit_FRONTIER_jacobi  submit_FRONTIER_put
scripts/haseeb/: mpi_collectives_2.sh  mpi_collectives_4.sh  mpi_collectives_8.sh  nvshmem_collectives_1.sh  nvshmem_collectives_2.sh  nvshmem_collectives_8.sh  run_nvshmem_collectives.sh
scripts/nan/: run_one_sided.sh  run_one_sided_1node.sh  submit_amd_hpc_fund.sh
scripts/personal/haseeb/: mpi_collectives_1.sh  nvshmem_collectives_4.sh  run_mpi_collectives.sh
scripts/personal/nan/: get_onesided_time_stencil.sh  run.sh  run_one_sided_2node.sh  run_one_sided_4node.sh
